--- a/src/main/resources/iouWeb/investor.html
+++ b/src/main/resources/iouWeb/investor.html
@@ -371,7 +371,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <th>Blocked Units</th>
                                         <th>Available Units</th>
                                         <th>Total Units</th> 
-                                        <th>Current Value of Available Units </th>    
+                                        <th>Current Value of Available Units </th>
+                                        <th>Currency</th>
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -381,6 +382,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right" id="HKIV01Av">{{demoApp.holding.split(',')[8]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[0]}}</td>
                                         <td class="vert-align" id ="HKIV01NavValue"></td>
+                                        <td>GBP</td>
                                         <!--  <td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -389,6 +391,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right" id="DBKS01Av">{{demoApp.holding.split(',')[9]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[1]}}</td>
                                         <td class="vert-align" id ="DBKS01NavValue"></td>
+                                        <td>GBP</td>
                                         <!--<td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -398,6 +401,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right" id="DBKS02Av">{{demoApp.holding.split(',')[10]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[2]}}</td>
                                         <td class="vert-align" id ="DBKS02NavValue"></td>
+                                        <td>GBP</td>
                                         <!--<td class="vert-align"></td>-->
                                     </tr>
                                     <tr>
@@ -407,6 +411,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td align="right" id="LUKT01Av">{{demoApp.holding.split(',')[11]}}</td>
                                         <td align="right">{{demoApp.holding.split(',')[3]}}</td>
                                         <td class="vert-align" id ="LUKT01NavValue"></td>
+                                        <td>GBP</td>
                                     </tr>
                                     <tr>
                                         Last Update on <span id="navUpdateTime"></span>
@@ -418,114 +423,6 @@ document.getElementById("txnid").innerHTML=todayDate;
                         <div class="col-md-1"></div>
 
                 </div>
-
-            <!-- This is where Rohan has started -->
-            <!--<div class="demo-charts mdl-color&#45;&#45;white mdl-shadow&#45;&#45;2dp mdl-cell mdl-cell&#45;&#45;12-col mdl-grid">
-
-                <div ng-show="!demoApp.ious.length" class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">There are no recorded Trades</h3>
-                    </div>
-                    <div class="panel-body">Use the "Buy/Sell" button to send an Trade to a Transfer Agent.</div>
-                </div>
-                <div ng-show="demoApp.ious.length" class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">Transaction Register:</h3>
-                    </div>
-                    <div class="panel-body">
-                        <table class="table">
-                            <thead>
-                            <tr>
-                                <th>Investor ID</th>
-                                <th>Fund</th>
-                                <th>Total Amount </th>
-                                <th>Total Units</th>
-                                <th>Percentage</th>
-
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr >
-                                <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[0]}}</td>
-                                <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[2]}}</td>
-                                <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[3]}}</td>
-                                <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[4]}}</td>
-                                <td ng-show="demoApp.register.split(',')[3]!='0.0'"  class="vert-align">{{demoApp.register.split(',')[5]}}</td>
-                                &lt;!&ndash;  <td class="vert-align"></td>&ndash;&gt;
-                            </tr>
-                            <tr>
-                                <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[6]}}</td>
-                                <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[8]}}</td>
-                                <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[9]}}</td>
-                                <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[10]}}</td>
-                                <td ng-show="demoApp.register.split(',')[9]!='0.0'" class="vert-align">{{demoApp.register.split(',')[11]}}</td>
-                                &lt;!&ndash;<td class="vert-align"></td>&ndash;&gt;
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[12]}}</td>
-                                <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[14]}}</td>
-                                <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[15]}}</td>
-                                <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[16]}}</td>
-                                <td ng-show="demoApp.register.split(',')[15]!='0.0'" class="vert-align">{{demoApp.register.split(',')[17]}}</td>
-                                &lt;!&ndash;<td class="vert-align"></td>&ndash;&gt;
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[21]!='0.0'" class="vert-align">{{demoApp.register.split(',')[18]}}</td>
-                                <td ng-show="demoApp.register.split(',')[21]!='0.0'" class="vert-align">{{demoApp.register.split(',')[20]}}</td>
-                                <td ng-show="demoApp.register.split(',')[21]!='0.0'" class="vert-align">{{demoApp.register.split(',')[21]}}</td>
-                                <td ng-show="demoApp.register.split(',')[21]!='0.0'" class="vert-align">{{demoApp.register.split(',')[22]}}</td>
-                                <td ng-show="demoApp.register.split(',')[21]!='0.0'" class="vert-align">{{demoApp.register.split(',')[23]}}</td>
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[27]!='0.0'" class="vert-align">{{demoApp.register.split(',')[24]}}</td>
-                                <td ng-show="demoApp.register.split(',')[27]!='0.0'" class="vert-align">{{demoApp.register.split(',')[26]}}</td>
-                                <td ng-show="demoApp.register.split(',')[27]!='0.0'" class="vert-align">{{demoApp.register.split(',')[27]}}</td>
-                                <td ng-show="demoApp.register.split(',')[27]!='0.0'" class="vert-align">{{demoApp.register.split(',')[28]}}</td>
-                                <td ng-show="demoApp.register.split(',')[27]!='0.0'" class="vert-align">{{demoApp.register.split(',')[29]}}</td>
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[33]!='0.0'" class="vert-align">{{demoApp.register.split(',')[30]}}</td>
-                                <td ng-show="demoApp.register.split(',')[33]!='0.0'" class="vert-align">{{demoApp.register.split(',')[32]}}</td>
-                                <td ng-show="demoApp.register.split(',')[33]!='0.0'" class="vert-align">{{demoApp.register.split(',')[33]}}</td>
-                                <td ng-show="demoApp.register.split(',')[33]!='0.0'" class="vert-align">{{demoApp.register.split(',')[34]}}</td>
-                                <td ng-show="demoApp.register.split(',')[33]!='0.0'" class="vert-align">{{demoApp.register.split(',')[35]}}</td>
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[39]!='0.0'" class="vert-align">{{demoApp.register.split(',')[36]}}</td>
-                                <td ng-show="demoApp.register.split(',')[39]!='0.0'" class="vert-align">{{demoApp.register.split(',')[38]}}</td>
-                                <td ng-show="demoApp.register.split(',')[39]!='0.0'" class="vert-align">{{demoApp.register.split(',')[39]}}</td>
-                                <td ng-show="demoApp.register.split(',')[39]!='0.0'" class="vert-align">{{demoApp.register.split(',')[40]}}</td>
-                                <td ng-show="demoApp.register.split(',')[39]!='0.0'" class="vert-align">{{demoApp.register.split(',')[41]}}</td>
-                            </tr>
-                            <tr>
-
-                                <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[42]}}</td>
-                                <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[44]}}</td>
-                                <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[45]}}</td>
-                                <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[46]}}</td>
-                                <td ng-show="demoApp.register.split(',')[45]!='0.0'" class="vert-align">{{demoApp.register.split(',')[47]}}</td>
-                            </tr>
-                            &lt;!&ndash; <td class="vert-align">{{iou.paid}}</td>&ndash;&gt;
-                            &lt;!&ndash; <td>
-                                 <div class="btn-group" role="group">
-                                     <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA'" ng-click="demoApp.openTransferModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Kyc
-                                     </button>
-                                     &lt;!&ndash;<button ng-click="demoApp.openSettleModal(iou.linearId.id)" type="button" class="btn btn-primary">Settle
-                                     </button>&ndash;&gt;
-                                 </div>
-                             </td>&ndash;&gt;
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-                <div class="col-md-1"></div>
-            </div>-->
         </div>
 
             <div class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
@@ -544,8 +441,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                                 <table class="table">
                                     <thead>
                                     <tr>
-                                        <th>From</th>
-                                        <th>To</th>
+                                        <th>Transaction Date</th>
                                         <th>Transaction ID</th>
                                         <th>Transaction Type</th>
                                         <th>Fund ID</th>
@@ -557,9 +453,11 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <th>Transaction Status</th>
                                         <th>Currency</th>
                                         <th>Amount Paid</th>
+                                        <th>From</th>
+                                        <th>To</th>
+                                        <th>Notary</th>
                                         <!-- <th>Amount</th>
                                          <th>Paid</th>-->
-                                        <th>Transaction Date</th>
                                         <!--  <th>Txn Date</th>
                                           <th>Txn Settle Date</th>  -->
 
@@ -568,9 +466,8 @@ document.getElementById("txnid").innerHTML=todayDate;
                                     </thead>
                                     <tbody>
                                     <tr ng-repeat="iou in demoApp.ious"  ng-if="iou.txnStatus!='Settled'">
-                                        <td class="vert-align">{{iou.lender}}</td>
-                                        <td class="vert-align">{{iou.borrower}}</td>
-                                        <td class="vert-align">{{iou.linearId.id}}</td>
+                                        <td class="vert-align">{{iou.transactiondate}}</td>
+                                        <td class="vert-align">{{iou.linearId.id.split("-")[0]}}</td>
                                         <td class="vert-align">{{iou.txType}}</td>
                                         <td class="vert-align">{{iou.fundId}}</td>
                                         <td class="vert-align">{{iou.lender.substring(3,10)}}</td>
@@ -581,7 +478,9 @@ document.getElementById("txnid").innerHTML=todayDate;
                                         <td class="vert-align">{{iou.txnStatus}}</td>
                                         <td class="vert-align">{{iou.ccy}}</td>
                                         <td align="right">{{iou.amountPaid}}</td>
-                                        <td class="vert-align">{{iou.transactiondate}}</td>
+                                        <td class="vert-align">{{iou.lender.split(",")[0].split("=")[1]}}</td>
+                                        <td class="vert-align">{{iou.borrower.split(",")[0].split("=")[1]}}</td>
+                                        <td>HSSNotary1</td>
                                         <!--<td>
                                             <div class="btn-group" role="group">
                                                 <button ng-show="demoApp.thisNode=='CN=TA,O=NodeA' && iou.txnStatus=='PEND'" ng-click="demoApp.openTransferModal(iou.linearId.id)" type="button" class="btn btn-primary">Update Kyc
