--- a/src/test/index.html
+++ b/src/test/index.html
@@ -687,7 +687,7 @@ document.getElementById("txnid").innerHTML=todayDate;
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="iou in demoApp.ious"  ng-if="iou.txnStatus=='Settled'" >
+                    <tr ng-repeat="iou in demoApp.ious"  ng-if="iou.txnStatus=='SETTLED'" >
                         <td class="vert-align">{{iou.lender}}</td>
                         <td class="vert-align">{{iou.borrower}}</td>
                         <td class="vert-align">{{iou.linearId.id}}</td>
