--- a/src/main/resources/iouWeb/FundManager.html
+++ b/src/main/resources/iouWeb/FundManager.html
@@ -58,7 +58,7 @@ document.getElementById("txnid").innerHTML=todayDate;
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Smart Transfer Agent    :</span>
+            <span class="mdl-layout-title">FundsNOW    :</span>
             <div class="mdl-layout-spacer">
 
             </div>
@@ -199,7 +199,7 @@ document.getElementById("txnid").innerHTML=todayDate;
             <div class="modal-footer">
                 <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
                 <!--<button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>-->
-                <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Sell Trade</button>
+                <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Create Trade</button>
             </div>
         </form>
     </script>
