--- a/src/test/index.html
+++ b/src/test/index.html
@@ -131,7 +131,7 @@ document.getElementById("txnid").innerHTML=todayDate;
         <div class="modal-footer">
             <button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>
             <!--<button ng-click="sellModal.cancel()" type="button" class="btn btn-default">Close</button>-->
-            <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Sell Trade</button>
+            <button ng-click="sellModal.create()" type="button" class="btn btn-primary">Create Trade</button>
         </div>
     </form>
 </script>
