--- a/src/main/resources/iouWeb/Transaction_history.html
+++ b/src/main/resources/iouWeb/Transaction_history.html
@@ -56,7 +56,7 @@ document.getElementById("txnid").innerHTML=todayDate;
 <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
     <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row">
-            <span class="mdl-layout-title">Smart Transfer Agent    :</span>
+            <span class="mdl-layout-title">FundsNOW    :</span>
             <div class="mdl-layout-spacer">
 
             </div>
